[package]
name = "demonhide"
version = "0.1.1"
edition = "2021"
rust-version = "1.90.0"
description = "Automatic pointer locking daemon for XWayland fullscreen applications with hidden cursors"
keywords = ["wayland", "xwayland", "pointer", "cursor", "fullscreen"]
categories = ["gui", "os::linux-apis"]

[dependencies]
glib = "0.17"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
x11 = { version = "2.21", features = ["xlib", "xfixes"] }
